--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>No Internet Dinosaur Game</title>
+  <title>Vroom Vroom</title>
 </head>
 <body>
   <div width="50px">&emsp;</div>
