--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://media.discordapp.net/attachments/998515548457541683/1024365952676155453/UMR.png">
   <link rel="stylesheet" href="styles.css">
   <title>Vroom Vroom</title>
 </head>
